# splitmod

./: README.md  check.sh  pyproject.toml
.github/: dependabot.yml
.github/workflows/: lint.yml  test.yml
doc/source/: changelog.rst  conf.py  index.rst  installation.rst  reference.rst  refs.rst
splitmod/: __init__.py
tests/: file1.py  file2.py
tests/django/: conftest.py  test_import.py  test_include.py  test_split_settings.py
tests/django/settings/merged/: __init__.py
tests/django/settings/merged/components/: apps_middleware.py  base.py  database.py  locale.py  logging.py  static.py  templates.py  testing.py
tests/django/settings/recursion/: __init__.py
tests/django/settings/stacked/: __init__.py  base.py
