[tool.poetry]
name = "splitmod"
version = "1.0.0"
description = "Split python modules across multiple files."
authors = ["Brian Kohan <bckohan@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/bckohan/splitmod"
homepage = "https://splitmod.rtfd.io"
keywords = ["split", "django", "settings", "config", "configuration", "conf"]
classifiers = [
    "Environment :: Console",
    "Framework :: Django",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Internet :: WWW/HTTP :: Site Management",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules"
]

packages = [
    { include = "splitmod" }
]
exclude = ["tests"]

[tool.poetry.dependencies]
python = ">=3.8,<4.0"


[tool.poetry.group.dev.dependencies]
ipdb = "^0.13.13"
pytest-cov = "^5.0.0"
Sphinx = [
    { version = "^7.2.0", markers = "python_version > '3.8'" },
    { version = "^7.0.0", markers = "python_version <= '3.8'" },
]
sphinx-rtd-theme = "^2.0.0"
doc8 = "^1.1.1"
aiohttp = "^3.9.1"
readme-renderer = {extras = ["md"], version = ">=42,<44"}
pytest-env = "^1.0.0"
pexpect = "^4.9.0"
pyright = "^1.1.357"
ruff = "^0.4.1"
mypy = "^1.10.0"
Django = ">=3.2"

[tool.mypy]
# The mypy configurations: http://bit.ly/2zEl9WI
# todo some stubs errors
ignore_missing_imports = true
exclude = ["tests"]


# todo doc8 configuration here is not being picked up and doesnt seem to be working
# as expected - for now pass these parameters manually
[tool.doc8]
max-line-length = 100
sphinx = true

[tool.pytest.ini_options]
# py.test options:
DJANGO_SETTINGS_MODULE = "tests.settings"
python_files = "test_*.py"
norecursedirs = "*.egg .eggs dist build docs .tox .git __pycache__ shellcompletion"
env = [
    "TERMINAL_WIDTH=80",
]

addopts = [
  "--strict-markers",
  "--cov=splitmod",
  "--cov-branch",
  "--cov-report=term-missing:skip-covered"
]

[tool.coverage.run]
omit = ["tests/**/*.py"]
branch = true
source = ["tests"]
concurrency = ["multiprocessing"]
parallel = true
relative_files = true
command_line = "-m pytest --cov=splitmod"

[tool.coverage.paths]
source = [
    "splitmod"
]

[tool.pyright]
exclude = ["tests/**/*"]
include = [
    "splitmod"
]

[tool.ruff]
line-length = 88
exclude = [
    "doc",
    "dist",
    "examples"
]

[tool.ruff.lint]
exclude = [
    "tests/**/*"
]
